# autora-experimentalist-MAFT

./: 404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs-publish.yml  tests.yml
.venv-1/: pyvenv.cfg
Additional Example/: index.html
Basic Usage/: index.html
challenge/: AutoRA_Experimentalist_Benchmarking_(Validation)_tested.ipynb  [Submitted]_AutoRA_Experimentalist_Benchmarking_(Validation).ipynb  experimentalist_benchmarking.ipynb  experimentalist_benchmarking_2.ipynb  experimentalist_benchmarking_3.ipynb
docs/: Basic Usage.ipynb  index.md
quickstart/: index.html
src/autora/experimentalist/autora_experimentalist_example/: __init__.py
tests/: __init__.py  mkdocs.yml  test_sample.py
