[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora_experimentalist_MAFT"
description = "This is an experimentalist made by team MAFT."
authors = [{ name = "Team MAFT" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora",
    "scikit-learn",
    "autora-theorist-bms",
    "autora[all-experimentalists]",
    "matplotlib",
    "dataclasses",
    "typing"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/acesmeci/autora-experimentalist-MAFT"
documentation = "https://acesmeci.github.io/autora-experimentalist-MAFT/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
